--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <img src="media/itz.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           
-          <a class="btn btn-outline-light p-3 animated fadeInDown" onclick="window.open('https://www.messenger.com/t/Dexter.LoLGG')">CHAT MO KO!<i class='fab fa-facebook-messenger animated zoomIn' style=" padding-left:10px; animation-delay: 1s; "></i></a>
+          <a class="btn btn-outline-light p-3 animated fadeInDown" onclick="window.open('https://www.messenger.com/t/dexter.nofies.50')">CHAT MO KO!<i class='fab fa-facebook-messenger animated zoomIn' style=" padding-left:10px; animation-delay: 1s; "></i></a>
         </div>
       </div>
     </div>
